--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.8",
+    "redux": "^4.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-cli": "^3.1.0",
@@ -33,6 +34,7 @@
     "webpack-hot-middleware": "^2.24.0"
   },
   "dependencies": {
+    "antd": "^3.9.2",
     "install": "^0.12.1",
     "npm": "^6.4.1"
   }
